feat(validation): implement Joi validation schemas for student and gurdian information
