# src/app/modules/student/student.model.ts
@@ -1,62 +1,76 @@
 import { Schema, model } from 'mongoose';
-import { Gurdian, LocalGurdian, Student, UserName } from './student.interface';
+import { Student, UserName } from './student.interface';
+// import validator from 'validator';
 
 const userNameSchema = new Schema<UserName>({
   firstName: {
     type: String,
+    trim: true,
     required: true,
   },
   middleName: {
     type: String,
+    trim: true,
   },
   lastName: {
     type: String,
+    trim: true,
     required: true,
   },
 });
 
-const gurdianSchema = new Schema<Gurdian>({
+const gurdianSchema = new Schema({
   fatherName: {
     type: String,
+    trim: true,
     required: true,
   },
   fatherOccupation: {
     type: String,
+    trim: true,
     required: true,
   },
   fatherContactNo: {
     type: String,
+    trim: true,
     required: true,
   },
   motherName: {
     type: String,
+    trim: true,
     required: true,
   },
   motherOccupation: {
     type: String,
+    trim: true,
     required: true,
   },
-  matherContactNo: {
+  motherContactNo: {
     type: String,
+    trim: true,
     required: true,
   },
 });
 
-const localGurdianSchema = new Schema<LocalGurdian>({
+const localGurdianSchema = new Schema({
   name: {
     type: String,
+    trim: true,
     required: true,
   },
   occupation: {
     type: String,
+    trim: true,
     required: true,
   },
   contactNo: {
     type: String,
+    trim: true,
     required: true,
   },
   address: {
     type: String,
+    trim: true,
     required: true,
   },
 });
@@ -64,32 +78,44 @@ const localGurdianSchema = new Schema<LocalGurdian>({
 const studentSchema = new Schema<Student>({
   id: {
     type: String,
+    trim: true,
+    required: true,
+    unique: true,
   },
   name: {
     type: userNameSchema,
+    trim: true,
+    required: true,
   },
   profileImage: {
     type: String,
+    trim: true,
   },
   gender: {
     type: String,
-    enum: ['male', 'female'],
-    required: true,
+    enum: {
+      values: ['male', 'female'],
+
+      message: '{VALUE} is not valid',
+    },
   },
   dateOfBirth: {
     type: String,
-    required: true,
   },
   email: {
     type: String,
+    trim: true,
     required: true,
+    unique: true,
   },
   contactNo: {
     type: String,
+    trim: true,
     required: true,
   },
   emergencyContactNo: {
     type: String,
+    trim: true,
     required: true,
   },
   bloodGroup: {
@@ -98,21 +124,29 @@ const studentSchema = new Schema<Student>({
   },
   presentAddress: {
     type: String,
+    trim: true,
     required: true,
   },
   permanentAddress: {
     type: String,
+    trim: true,
     required: true,
   },
   gurdian: {
     type: gurdianSchema,
+    required: true,
   },
   localGurdian: {
     type: localGurdianSchema,
+    required: true,
   },
   isActive: {
     type: String,
-    enum: ['active', 'blocked'],
+    enum: {
+      values: ['active', 'blocked'],
+      message: "Status must be either 'active' or 'blocked'",
+    },
+    default: 'active',
   },
 });
 
